# crms-desktop

./: .gitignore  .pre-commit-config.yaml  ACCOUNTING_METADATA_ENGINE.md  ARCHITECTURE.md  ARCHITECTURE_REFACTORING.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE_SCHEMA.sql  DECISIONS.md  DEPENDENCY_GRAPH.md  DEPENDENCY_GRAPH_UPDATED.md  DEVELOPMENT_STATUS.md  LICENSE  METADATA_ARCHITECTURE.md  PERSISTENCE_BOUNDARY.md  PHASE1_QUALITY_REVIEW_REPORT.md  PHASE1_REVIEW_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  REAL_DATASET_ANALYSIS.md  REAL_WORLD_VALIDATION.md  RED_TEAM_SECURITY_REVIEW.md  RELEASE_NOTES_v0.1.md  REPOSITORY_ARCHITECTURE.md  ROADMAP.md  SCANNER_DESIGN.md  SCANNER_REFACTORING.md  SECURITY.md  SECURITY_DECISIONS.md  TECH_STACK.md  classification_results.csv  dataset_analysis.csv  electron-builder.yml  package.json
backend/: .env.example  .flake8  .mypy.ini  analyze_classification.py  analyze_csv_stats.py  analyze_real_dataset.py  benchmark_extractor.py  benchmark_scanner.py  main.py  pyproject.toml  requirements.txt  validate_classification.py
backend/accounting/: __init__.py  accounting_extractor.py  synthetic_generator.py  validation_framework.py
backend/classifier/: __init__.py  base.py  document_type_detector.py
backend/core/: __init__.py  base.py  config.py  constants.py  exceptions.py  logging.py
backend/database/: __init__.py  connection.py  exceptions.py  mappers.py  models.py
backend/domain/: __init__.py
backend/extractor/: __init__.py  base.py  base_extractor.py  data_structures.py  excel_extractor.py  factory.py  image_extractor.py  pdf_extractor.py  word_extractor.py
backend/pipeline/: job_queue.py
backend/repositories/: __init__.py  audit_log_repository.py  base.py  document_repository.py  interfaces.py  metadata_repository.py  relationship_repository.py  unit_of_work.py  version_log_repository.py
backend/scanner/: __init__.py  data_structures.py  document_scanner.py  file_scanner.py  filter_manager.py  hash_generator.py  path_resolver.py  progress_tracker.py  scan_state.py  scanner.py  scanner_v2.py  worker_pool.py
backend/scripts/: init_db.py
backend/tests/: conftest.py  test_config.py
backend/tests/test_accounting/: __init__.py  test_accounting_extractor.py  test_real_world_validation.py
backend/tests/test_extractors/: __init__.py  (+1 more)
backend/validation/: gst_validator.py
(+26 files in other folders)
