[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crms-backend"
version = "1.0.0"
description = "Company Records Management System - Backend"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "PROPRIETARY"}
authors = [
    {name = "CRMS Development Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "PyPDF2>=3.0.1",
    "pdfplumber>=0.10.3",
    "openpyxl>=3.1.2",
    "pandas>=2.1.3",
    "python-docx>=1.1.0",
    "Pillow>=10.1.0",
    "pytesseract>=0.3.10",
    "xlsxwriter>=3.1.9",
    "pluggy>=1.3.0",
    "python-multipart>=0.0.6",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "scikit-learn>=1.3.2",
    "numpy>=1.26.2",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
    "mypy>=1.7.1",
    "types-python-dateutil>=2.8.19.14",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
]

[tool.setuptools]
packages = ["core", "scanner", "extractor", "classifier", "pipeline", "validation", "database", "plugins"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=html --cov-report=term"
asyncio_mode = "auto"
